--- a/ux.html
+++ b/ux.html
@@ -82,7 +82,7 @@ animation: AnimationName 12s ease infinite;">
             </section> -->
                 <article id="interview">
                     <h1 style="font-size:40px;margin:0px;">Interview</h1>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
                     <h2 style="margin:0px;">Interview Preparation</h2>
                     <p></p>
                     <p>The purpose of the interview is to find out the needs of the client's target audience. This can
@@ -150,9 +150,27 @@ animation: AnimationName 12s ease infinite;">
         <div class="contentDivider">
             <h1 id="dividerText">Prototype</h1>
             <section id="content">
+                <article>
+
+                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
+                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
+                        interface should look like. My direction is to make a clean minimalist and presentable looking
+                        site
+                        with an intuitive interface.</p>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle collapsed"></div>
+                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    </div>
+                </article>
+            </section>
+            <br /><br />
+            <section id="content">
                 <article id="storyboard">
                     <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
                     <p>A storyboard was originally used for the film industry. In designing user experience it is used
                         as a
                         tool to visualize an idea or a concept, to describe the context use of a product, and to show
@@ -176,31 +194,11 @@ animation: AnimationName 12s ease infinite;">
 
             <section id="content">
                 <article>
-
-                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
-                        interface should look like. My direction is to make a clean minimalist and presentable looking
-                        site
-                        with an intuitive interface.</p>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle collapsed"></div>
-                        <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-                    </div>
-                </article>
-            </section>
-
-            <br /><br />
-
-            <section id="content">
-                <article>
                     <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h3>
+                    <p>In this video prototype, it will showcase on how would likely the reaction be of Aisha's followers be when they discover the 'Online Quest' for the first time.</p>
                     <video class="contentAttachment" width="1920" height="1080" controls>
-                        <source src="" type="video/mp4">
+                        <source src="content/Video Prototype v2-63SJFx_ypeI.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     <div class="feedback">
