--- a/ptm.html
+++ b/ptm.html
@@ -77,9 +77,9 @@ animation: AnimationName 12s ease infinite;">
                     <img style="width: 40%;height: auto;" src="content/zegmijAR_Preview.jpg"></div>
                 <br />
                 <div class="contentPlaceholder" style="text-align: center;">
-                    <img style="width: 35%;height: auto;" src="content/scanCodeAR.png"><br />
-                    <a
-                        href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Snapchat
+                    <img style="width: 35%;height: auto;" src="content/scanCodeAR.png"><br /><br />
+                    <a class="btn" target="_blank"
+                        href="https://www.snapchat.com/unlock/?type=SNAPCODE&uuid=a57c53fa34444780a3efee374229967c&metadata=01">Link to the Snapchat
                         AR filter</a>
                 </div>
 
@@ -89,7 +89,7 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-        </section>>
+        </section>
         <br />
         <br />
         <section id="content">
@@ -155,8 +155,8 @@ animation: AnimationName 12s ease infinite;">
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="sprintX.html">Sprint X</a>
-        <a href="ptm.html">Project</a>
         <a href="dev.html">Development</a>
+        <a href="ptm.html">Project</a>
         <a href="ux.html">UX</a>
         <a href="sco.html">SCO</a>
     </div>
