--- a/dev.html
+++ b/dev.html
@@ -110,12 +110,15 @@ animation: AnimationName 12s ease infinite;">
             <article>
                 <h2 style="font-size: 40px;margin-bottom:0px;">Gallery Slideshow</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
-                <p>To showcase the photograpghy assignment i did for SCO i have made a gallery slideshow using basic
-                    HTML, CSS, and Javascript.</p>
+                <p>To showcase the photograpghy assignment i did for SCO wanted to make a gallery slideshow.</p>
+                <p> This POC is a perfect opportunity to start learning web development from scratch and with a guidance from w3school i have managed to create this gallery slideshow.</p>
+                <div class="contentPlaceholder" style="text-align: center;">
                 <video class="contentAttachment" width="1920" height="1080" controls>
                     <source src="content/gallerySlideshow_preview.mp4" type="video/mp4">
                     Your browser does not support the video tag.
-                </video>
+                </video><br /><br />
+                <a class="btn" href="https://www.w3schools.com/howto/howto_js_slideshow.asp">Tutorial on w3schools</a>
+                </div>
                 <div class="contentAttachment" src="content/ConceptingColor.jpg">
                     <div class="feedback">
                         <h1>Feedback</h1>
@@ -381,6 +384,7 @@ function animate() {
                 </div>
             </article>
         </section>
+        <br /><br />
     </div>
 
 
