--- a/sprintX.html
+++ b/sprintX.html
@@ -193,6 +193,7 @@ function animate() {
                 </div>
             </article>
         </section>
+        <br /><br />
         <!-- <br /><br /> -->
         <!--<section id="content">
             <article>
@@ -218,7 +219,7 @@ function animate() {
         <a href="ptm.html">Project</a>
         <a href="ux.html">UX</a>
         <a href="sco.html">SCO</a>
-    </div>1
+    </div>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
