--- a/ux.html
+++ b/ux.html
@@ -143,10 +143,9 @@ animation: AnimationName 12s ease infinite;">
                     <p style="display: none;font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>-->
+            <br /><br />
         </div>
-
         <br /><br />
-
         <div class="contentDivider">
             <h1 id="dividerText">Prototype</h1>
             <section id="content">
@@ -196,7 +195,8 @@ animation: AnimationName 12s ease infinite;">
                 <article>
                     <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h3>
-                    <p>In this video prototype, it will showcase on how would likely the reaction be of Aisha's followers be when they discover the 'Online Quest' for the first time.</p>
+                    <p>In this video prototype, it will showcase on how would likely the reaction be of Aisha's
+                        followers be when they discover the 'Online Quest' for the first time.</p>
                     <video class="contentAttachment" width="1920" height="1080" controls>
                         <source src="content/Video Prototype v2-63SJFx_ypeI.mp4" type="video/mp4">
                         Your browser does not support the video tag.
@@ -208,7 +208,11 @@ animation: AnimationName 12s ease infinite;">
                     </div>
                 </article>
             </section>
+            <br /><br />
+
         </div>
+        <br /><br />
+
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
