--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ animation: AnimationName 12s ease infinite;">
                 Welcome.</h1>
             <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2
                 of ICT &
-                Media Design.<br /><a href="about.html" style="color: white;">About me</a></p>
+                Media Design in Fontys University.<br /><br /><a class="btnContrast" href="about.html" style="color: white;">About me</a></p>
 
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
