--- a/sprintX.html
+++ b/sprintX.html
@@ -43,10 +43,10 @@ animation: AnimationName 12s ease infinite;">
                 <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <p>This was a pet project of mine and in Sprint X with the help of Mr. Chris Geene as my mentor, i have
-                    managed to finalize and polish this interactive visual art that i made using ThreeJS, a JavaScript
-                    3D web
-                    graphics library. </p>
+                    <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the help of Mr. Chris Geene as my mentor, i have
+                        managed to finalize and polish this interactive visual art that i made using ThreeJS, a JavaScript
+                        3D web
+                        graphics library. </p>
                 <!-- <p>As part of the process for me to practice my Javascript skills i decided to make an interactive
                     visual that is <em>now playing</em> on the background of this site by using ThreeJS JavaScript web
                     3D graphics
@@ -130,6 +130,7 @@ var material1 = new THREE.MeshNormalMaterial(); //object1 material
                 <h2>4. Inheritance Cloner</h2>
                 <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;"
                         src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
+                        <br />
                 <p>I wanted to have a very dynamic visuals to fill the whole screen and i spent a lot of time
                     experimenting on this. From my experience from using 3D software suites such as Cinema 4D and
                     Blender, i know that objects can be 'cloned' using a cloner tool. So with the help of Mr.Chris
