--- a/about.html
+++ b/about.html
@@ -28,39 +28,12 @@ animation: AnimationName 12s ease infinite;">
 
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
-        <section style="margin: 0px 68px 40px 68px">
-            <img class="contentAttachment" src="content/sp_img.JPG"></img>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam volutpat mollis augue, sit amet tincidunt
-                felis tincidunt sit amet. Nam vel massa et ex consequat fermentum eget ut dui. Phasellus sit amet nisi
-                pulvinar, dictum mi sit amet, vulputate sapien. Fusce aliquet sagittis sem eu porta. Aliquam erat
-                volutpat. Sed luctus ipsum purus, eu convallis arcu sagittis vitae. Maecenas porttitor sagittis
-                suscipit. Praesent tristique urna purus, vel vulputate magna aliquam et. Donec luctus porttitor sapien
-                id porttitor. Vestibulum vel euismod urna. Sed elit velit, elementum vitae nulla ac, cursus porta elit.
-                Sed quis tempus dui, accumsan eleifend odio.
-
-                Ut in elit id nunc pretium finibus id vel justo. Aenean eleifend efficitur urna, non mattis sapien
-                scelerisque ut. Praesent non malesuada leo, id luctus leo. Sed rhoncus, turpis et sagittis volutpat,
-                velit lorem auctor massa, ut finibus ipsum lacus vel orci. Orci varius natoque penatibus et magnis dis
-                parturient montes, nascetur ridiculus mus. Suspendisse magna sapien, tincidunt quis ante vel, ultricies
-                pulvinar risus. Phasellus at hendrerit diam.
-
-                Nunc consectetur justo at diam volutpat, eu faucibus tellus hendrerit. Nulla vestibulum justo sit amet
-                lacus malesuada, sed luctus felis feugiat. Proin facilisis varius est, ac accumsan felis aliquet vel. Ut
-                eu faucibus odio, sed lacinia mi. Vivamus efficitur quam non molestie pellentesque. Phasellus varius
-                imperdiet lorem at rhoncus. Proin at magna libero. Suspendisse tempus, nisi a tincidunt posuere, sem
-                ante sodales lectus, sit amet blandit tortor nulla eu tortor. Cras vestibulum velit enim, molestie
-                laoreet massa sollicitudin nec. Phasellus vitae libero vitae mauris ultrices imperdiet nec vel nunc.
-                Aliquam erat volutpat. Fusce bibendum libero nisi, sed pretium erat malesuada et. Vivamus vel iaculis
-                augue. Fusce euismod nisl vitae vulputate vulputate. Maecenas lobortis metus id luctus auctor.
-
-                In ut lacus gravida, semper nisl at, rhoncus eros. Nam non mattis purus. Sed hendrerit tempor blandit.
-                Aenean egestas laoreet tincidunt. Nullam pharetra metus sed neque scelerisque tempus. Nullam vitae erat
-                nec tellus rutrum ultricies a in elit. Sed blandit erat at ex placerat laoreet. Nam vel odio nec dui
-                hendrerit interdum. Nunc a erat id tellus molestie ultrices gravida sit amet massa. In finibus est sit
-                amet dictum convallis. Ut a commodo tortor. Nunc non est gravida, dictum massa sed, blandit nulla. Cras
-                luctus quam sed mauris dapibus, non placerat velit accumsan. Maecenas rutrum libero turpis, eu aliquet
-                augue congue dictum.</p>
-        </section>
+        <div id="aboutMe">
+            <section>
+                <img class="contentAttachment" src="content/sp_img.JPG"></img>
+                <p>My name is Arief. I came from the</p>
+            </section>
+        </div>
     </div>
 
 
