implemented goBack() method to interactive visual

--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -20,7 +20,7 @@ animation: AnimationName 12s ease infinite;">
         <!-- BODY HEADER____________________________________________________________________________________________________________ -->
         <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
-                <a href="dev.html" style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
+                <a onclick="goBack()" style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
             </div>
         </header>
 
