--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@ animation: AnimationName 12s ease infinite;">
                 style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
                 Welcome.</h1>
-            <p style="text-align: center;margin: 0px;">In this portfolio is an overwiew of my studies in the semester 2
+            <p style="text-align: center;margin: 0px;">This portfolio is made to showcase my projects and assignments of
+                my studies in the semester 2
                 of ICT &
-                Media Design in Fontys University.<br /><br /><a class="btnContrast" href="about.html" style="color: white;">About me</a></p>
+                Media Design in Fontys University.<br /><br /><a class="btnContrast" href="about.html"
+                    style="color: white;">About me</a></p>
 
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
