--- a/visual1.html
+++ b/visual1.html
@@ -13,7 +13,7 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.module.js"></script> -->
     <script src="js/OrbitControls.js"></script>
-    <script src="js/visual1.js"></script>
+    <script src="js/experiment1.js"></script>
 </body>
 
 </html>
