--- a/about.html
+++ b/about.html
@@ -31,7 +31,15 @@ animation: AnimationName 12s ease infinite;">
         <div id="aboutMe">
             <section>
                 <img class="contentAttachment" src="content/sp_img.JPG"></img>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac maximus nisi, eu iaculis nunc. Nulla viverra risus non tellus mattis, nec dictum velit convallis. Duis luctus massa purus, a laoreet lorem hendrerit sit amet. Suspendisse ante nisi, tempus ut diam eget, porta semper nunc. Cras et nibh porttitor nibh condimentum dignissim sit amet sed nunc. Morbi non fringilla lacus. Praesent nunc augue, lacinia quis est quis, feugiat malesuada tellus. Vivamus sollicitudin, tellus pellentesque ultricies viverra, tortor dolor dictum ante, ut aliquet nisl quam vitae tortor. Integer ultrices metus non vestibulum pretium. Nulla sagittis quis felis at tincidunt. Sed condimentum mauris quis commodo laoreet. Cras at pretium lorem, quis cursus eros. Duis dictum justo id eleifend tincidunt. Pellentesque semper sapien nec finibus varius. In hac habitasse platea dictumst.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac maximus nisi, eu iaculis nunc. Nulla
+                    viverra risus non tellus mattis, nec dictum velit convallis. Duis luctus massa purus, a laoreet
+                    lorem hendrerit sit amet. Suspendisse ante nisi, tempus ut diam eget, porta semper nunc. Cras et
+                    nibh porttitor nibh condimentum dignissim sit amet sed nunc. Morbi non fringilla lacus. Praesent
+                    nunc augue, lacinia quis est quis, feugiat malesuada tellus. Vivamus sollicitudin, tellus
+                    pellentesque ultricies viverra, tortor dolor dictum ante, ut aliquet nisl quam vitae tortor. Integer
+                    ultrices metus non vestibulum pretium. Nulla sagittis quis felis at tincidunt. Sed condimentum
+                    mauris quis commodo laoreet. Cras at pretium lorem, quis cursus eros. Duis dictum justo id eleifend
+                    tincidunt. Pellentesque semper sapien nec finibus varius. In hac habitasse platea dictumst.</p>
             </section>
         </div>
     </div>
