--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ animation: AnimationName 12s ease infinite;">
         <header style="border-bottom: 0px;background: none;">
             <div class="headercontainer">
                 <a href="index.html"
-                    style="font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
+                    style="cursor:pointer;font-size: 55px; text-decoration:none; color: rgba(255, 255, 255, 0.35); margin-left: 20px; margin-top: 0%;">✕</a>
             </div>
         </header>
 
